[gd_scene load_steps=6 format=3 uid="uid://bs1dnvgdjci53"]

[ext_resource type="StyleBox" uid="uid://ivmclmvcwoko" path="res://Styles/FlatMask.tres" id="1_4uypc"]
[ext_resource type="Script" path="res://Scripts/analyticsManager.gd" id="1_qoxbi"]
[ext_resource type="Script" path="res://Scripts/graph_Manager.gd" id="1_whvnd"]
[ext_resource type="Texture2D" uid="uid://dc2oywla7xlix" path="res://Textures/progress_circular.svg" id="4_klybe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7xe3"]
bg_color = Color(1, 1, 1, 0.0784314)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[node name="Analytics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -590.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_qoxbi")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.1672, 0.76, 0.6612, 0.392157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("1_4uypc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 50

[node name="HBoxContainer1" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "Writing"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
mouse_filter = 1
alignment = 1
selected = 0
allow_reselect = true
item_count = 5
popup/item_0/text = "7 days"
popup/item_1/id = 1
popup/item_1/separator = true
popup/item_2/text = "14 days"
popup/item_2/id = 2
popup/item_3/id = 3
popup/item_3/separator = true
popup/item_4/text = "30 days"
popup/item_4/id = 4

[node name="Info" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Light"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Data for your writing PQ for the last 7 days"

[node name="Graph" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
mouse_filter = 2
script = ExtResource("1_whvnd")
lineWidth = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Label_Mid"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Growth"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30
alignment = 1

[node name="progressHigh" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
max_value = 5000.0
value = 3950.0
fill_mode = 4
radial_initial_angle = 225.0
radial_fill_degrees = 270.0
nine_patch_stretch = true
texture_under = ExtResource("4_klybe")
texture_progress = ExtResource("4_klybe")
tint_progress = Color(0.168627, 0.760784, 0.662745, 1)

[node name="progressStarting" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2/progressHigh"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
max_value = 5000.0
value = 1925.0
fill_mode = 4
radial_initial_angle = 225.0
radial_fill_degrees = 270.0
nine_patch_stretch = true
texture_progress = ExtResource("4_klybe")
tint_progress = Color(0.121569, 0.560784, 0.486275, 1)

[node name="progressLow" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2/progressHigh/progressStarting"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
max_value = 5000.0
value = 500.0
fill_mode = 4
radial_initial_angle = 225.0
radial_fill_degrees = 270.0
nine_patch_stretch = true
texture_progress = ExtResource("4_klybe")
tint_progress = Color(0.0572, 0.26, 0.2262, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/progressHigh/progressStarting/progressLow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="Growth" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/progressHigh/progressStarting/progressLow/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Light"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "90%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/progressHigh/progressStarting/progressLow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "growth"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 1

[node name="StartingPQ" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Light"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "9999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer1"]
layout_mode = 2
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Starting PQ"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 1

[node name="CurrentPQ" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Light"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "9999
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Current PQ"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_b7xe3")

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
alignment = 1

[node name="Proficiency" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Panel/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Light"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "intermediate"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Panel/VBoxContainer3"]
layout_mode = 2
theme_type_variation = &"Label_Bold"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "proficiency"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="child_entered_tree" from="MarginContainer/VBoxContainer/HBoxContainer1/OptionButton" to="." method="_on_option_button_child_entered_tree"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer1/OptionButton" to="." method="_on_option_button_item_selected"]
